--- a/templates/stream_processing_input.html
+++ b/templates/stream_processing_input.html
@@ -23,7 +23,7 @@
     </tr>
   </thead>
   <tbody id="file-info-tbody">
-    {% for row in table_data %}
+    {% for row in stream_table %}
     <tr>
       <td><input type="number" class="editable order" value="{{ row['order'] }}" style="width: 60px;"></td>
       <td>
