--- a/templates/Dash0.html
+++ b/templates/Dash0.html
@@ -192,8 +192,8 @@
 {% block captains %}
 
 <div id="tabletitle" class="innertube">
-  <li id="selectedTitle"> Table Details
- <select id="tableSelector">
+  <span id="selectedTitle">Table Details</span>
+  <select id="tableSelector">
     <option value="resources">Resources</option>
     <option value="markerframe">Event Markers</option>
     <option value="stream_table">Import Data Streams</option>
@@ -208,9 +208,8 @@
     <option value="street_layer">Streets</option>
     <option value="walkleg_layer">Walklegs</option>
   </select>
-  </li>
-  
 </div>
+
 
 <div id="datawin" class="innertube">
 
