--- a/static/style.css
+++ b/static/style.css
@@ -113,9 +113,17 @@ body {
 }
 
 #tabletitle {
-  display: flex;
-  align-items: left; /* vertically align items */
-  gap: 1rem;            /* spacing between the elements */
+position: absolute;
+height: 14px;
+width: 1200px;
+background: white;
+left: 0;
+bottom: 230px;
+font-weight: bold;
+font-size: 1.5em;
+display: flex;
+align-items: center; /* vertically align items */
+gap: 1rem;
 }
 
 #selectedTitle {
